--- a/projects/10-Responsive-Layout/index.html
+++ b/projects/10-Responsive-Layout/index.html
@@ -6,12 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Layout</title>
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/tablet.css" media="screen and (max-width: 950px)">
 </head>
 <body>
     <div class="container">
-        <header></header>
-        <nav></nav>
-        <main>
+        <header class="addFlex">
+            <h1>My<span class="span-logo">Logo.</span></h1>
+            <nav>
+                <ul class="addFlex">
+                    <li class="active">Start</li>
+                    <li>About</li>
+                    <li>Pricing</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
+        </header>
+        <main class="addFlex">
             <aside class="main-left"></aside>
             <section class="main-center"></section>
             <aside class="main-right"></aside>
