Been working on responsive layout - desktop - tablet - phone

--- a/projects/10-Responsive-Layout-Copy/index.html
+++ b/projects/10-Responsive-Layout-Copy/index.html
@@ -6,20 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Layout</title>
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/tablet.css" media="screen and (max-width: 950px)">
-    <link rel="stylesheet" href="assets/css/phone.css" media="screen and (max-width: 500px)">
+    <link rel="stylesheet" href="assets/css/tablet.css" media="screen and (max-width:800px)">
 </head>
 <body>
-    <div class="container">
+    <div class="container addFlex">
         <header class="addFlex">
-            <h1>My<span class="span-logo">Logo.</span></h1>
-            <img src="assets/images/Icon awesome-hamburger.svg" alt="menu icon">
+            <h1>My<span>Logo</span></h1>
             <nav>
                 <ul class="addFlex">
-                    <li class="active">Start</li>
-                    <li>About</li>
-                    <li>Pricing</li>
-                    <li>Contact</li>
+                    <li class="active">item 1</li>
+                    <li>item 2</li>
+                    <li>item 3</li>
+                    <li>item 4</li>
                 </ul>
             </nav>
         </header>
