--- a/projects/web2/5-JavaScript-Grunder/index.html
+++ b/projects/web2/5-JavaScript-Grunder/index.html
@@ -8,10 +8,15 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <h1>JavaScript - Grunder</h1>
-    <p>En introduktion om JavaScript</p>
+    <input type="text" id="userInput" placeholder="Search a subject">
+    <h1 id="showSubject"></h1>
 
-    <button>Klicka här</button>
-    <script src="assets/js/script.js"></script>
+    <h3 id="showWeather"></h3>
+
+    <p id="time"></p>
+
+    <h1 id="currentDay"></h1>
+
+    <script src="assets/js/1-ifelseSwitch.js"></script>
 </body>
 </html>
