finished while and started for

--- a/projects/web2/5-JavaScript-Grunder/index.html
+++ b/projects/web2/5-JavaScript-Grunder/index.html
@@ -17,6 +17,12 @@
 
     <h1 id="currentDay"></h1>
 
-    <script src="assets/js/1-ifelseSwitch.js"></script>
+    <div id="square"></div>
+
+    <button id="draw">Draw A Card</button>
+
+    <img id="congratsText" src="" alt="">
+
+    <script src="assets/js/3-for.js"></script>
 </body>
 </html>
